style: :lipstick: update second color and add logo and wallpaper background in login page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --main-color: #ececec;
-  --secondary-color: #181725;
-  --accent-color: #12e497;
+  --secondary-color: #161c2d;
+  --accent-color: #00a2a2;
   --error-color: #ff0000;
   --blue: #006dfb;
   --purple: #41197f;
