--- a/frontend/src/components/Login/login.module.css
+++ b/frontend/src/components/Login/login.module.css
@@ -2,27 +2,35 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--main-color);
   width: 100%;
   height: 100vh;
+  background-image: url('../../assets/wallpaper-login.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .login_form {
-  width: 300px;
-  height: 350px;
+  width: 400px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: rgba( 236, 236, 236, 0.05 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 20px );
+  -webkit-backdrop-filter: blur( 20px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
-label {
-  margin-bottom: 12px;
+.label {
+  margin-bottom: 18px;
   width: 90%;
   position: relative;
 }
 
-input[type='text'], input[type='password'] {
+.input {
   padding: 12px, 16px;
   font-size: 18px;
   border-radius: 10px;
@@ -34,8 +42,7 @@ input[type='text'], input[type='password'] {
   color: white;
 }
 
-
-button {
+.button {
   cursor: pointer;
   border: none;
   border-radius: 0.625rem;
@@ -48,7 +55,7 @@ button {
   font-size: 20px;
 }
 
-button:active {
+.button:active {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.10);
 }
 
@@ -58,4 +65,51 @@ button:active {
   position: absolute;
   right: 16px;
   top: 10px;
+}
+
+.logo {
+  width: 17rem;
+  margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 640px) {
+  .login_form {
+    width: 300px;
+    height: 350px;
+  }
+
+  .label {
+    margin-bottom: 12px;
+  }
+
+  .logo {
+    margin-bottom: 1.5rem;
+  }
+}
+
+
+@media screen and (max-width: 340px) {
+  .login_form {
+    width: 200px;
+    height: 300px;
+  }
+
+  .label {
+    margin-bottom: 12px;
+  }
+
+  .input {
+    padding: 6px, 12px;
+    font-size: 12px;
+  }
+
+  .button {
+    padding: 0.4rem 1rem;
+    font-size: 16px;
+  }
+
+  .logo {
+    width: 10rem;
+    margin-bottom: 1.5rem;
+  }
 }
