--- a/frontend/src/components/Login/login.module.css
+++ b/frontend/src/components/Login/login.module.css
@@ -1,62 +1,61 @@
 .container {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100vh;
   background-image: url('../../assets/wallpaper-login.png');
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  width: 100%;
 }
 
 .login_form {
-  width: 400px;
-  height: 400px;
+  align-items: center;
+  backdrop-filter: blur(20px);
+  background: rgba(236, 236, 236, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 400px;
   justify-content: center;
-  background: rgba( 236, 236, 236, 0.05 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 20px );
-  -webkit-backdrop-filter: blur( 20px );
-  border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  width: 400px;
 }
 
 .label {
   margin-bottom: 18px;
-  width: 90%;
   position: relative;
+  width: 90%;
 }
 
 .input {
-  padding: 12px, 16px;
-  font-size: 18px;
-  border-radius: 10px;
   background-color: var(--secondary-color);
   border: 10px solid var(--secondary-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
-  width: 100%;
-  outline: none;
+  border-radius: 10px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
   color: white;
+  font-size: 18px;
+  outline: none;
+  padding: 12px , 16px;
+  width: 100%;
 }
 
 .button {
-  cursor: pointer;
+  background: var(--accent-color);
   border: none;
   border-radius: 0.625rem;
-  transition: 0.1s;
-  background: var(--accent-color);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
   color: var(--secondary-color);
-  padding: 0.8rem 1.6rem;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
-  width: 90%;
+  cursor: pointer;
   font-size: 20px;
+  padding: 0.8rem 1.6rem;
+  transition: 0.1s;
+  width: 90%;
 }
 
 .button:active {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.10);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 .login_form svg {
@@ -68,14 +67,15 @@
 }
 
 .logo {
-  width: 17rem;
   margin-bottom: 2rem;
+  width: 17rem;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and ( max-width : 640px ) {
+
   .login_form {
-    width: 300px;
     height: 350px;
+    width: 300px;
   }
 
   .label {
@@ -88,10 +88,11 @@
 }
 
 
-@media screen and (max-width: 340px) {
+@media screen and ( max-width : 340px ) {
+
   .login_form {
-    width: 200px;
     height: 300px;
+    width: 200px;
   }
 
   .label {
@@ -99,17 +100,17 @@
   }
 
   .input {
-    padding: 6px, 12px;
     font-size: 12px;
+    padding: 6px , 12px;
   }
 
   .button {
-    padding: 0.4rem 1rem;
     font-size: 16px;
+    padding: 0.4rem 1rem;
   }
 
   .logo {
-    width: 10rem;
     margin-bottom: 1.5rem;
+    width: 10rem;
   }
 }
