--- a/frontend/src/components/NavBar/navbar.module.css
+++ b/frontend/src/components/NavBar/navbar.module.css
@@ -22,10 +22,7 @@
   color: var(--accent-color);
 }
 
-.name_user {
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px;
-  margin-right: 3%;
+.logo {
+  margin-left: 1%;
+  width: 17rem;
 }
